@@ -1,6 +1,7 @@
 #!/usr/bin/env bash
 # SPDX-License-Identifier: BSD-3-Clause
 # Copyright 2018-2024, Intel Corporation
+# Copyright 2025-2026, Hewlett Packard Enterprise Development LP
 #
 #
 # pmempool_sync/TEST32 -- test for sync command
@@ -12,8 +13,8 @@
 
 . ../unittest/unittest.sh
 
+require_real_pmem
 require_test_type medium
-require_fs_type non-pmem
 require_build_type debug nondebug
 require_linked_with_ndctl $PMEMPOOL$EXESUFFIX
 
@@ -34,8 +35,6 @@ expect_normal_exit $PMEMPOOL$EXESUFFIX rm $POOLSET
 expect_normal_exit $PMEMPOOL$EXESUFFIX create obj --layout pmempool$SUFFIX $POOLSET
 
 expect_normal_exit "$OBJ_VERIFY$EXESUFFIX $POOLSET pmempool$SUFFIX c v &>> $LOG"
-
-turn_on_checking_bad_blocks $POOLSET
 
 # zero blocks: offset: 2 length: 250
 zero_blocks $DIR/testfile0 2 250
